--- a/app/src/main/res/layout/fragment_ventana_ahorcado.xml
+++ b/app/src/main/res/layout/fragment_ventana_ahorcado.xml
@@ -10,9 +10,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="_ _ _ _ _"
+        android:text=""
         android:layout_weight="2"
-        android:textSize="62sp"
+        android:textSize="50sp"
         android:id="@+id/palabraConGuiones"
         android:layout_gravity="center_vertical|top"
         android:gravity="center_vertical|center_horizontal"
@@ -251,13 +251,12 @@
             android:id="@+id/botonW"></Button>
 
         <Button
+            android:id="@+id/botonVacio"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="botonPulsado"
             android:text=""
-            android:textSize="25sp"
-            android:id="@+id/botonVacio"></Button>
+            android:textSize="25sp"></Button>
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -283,6 +282,14 @@
             android:textSize="25sp"
             android:id="@+id/botonZ"></Button>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonReiniciar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:onClick="reiniciar"
+        android:text="Reiniciar" />
 
 
 </LinearLayout>
